samples/_failures_safe/1761486759_ff6057_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2847d3e7.c: In function ‘main’:
./samples/SAFE/__tmp_2847d3e7.c:163:35: error: expected ‘)’ at end of input
  163 |         if (!graph_add_edge(&graph
      |                            ~      ^
      |                                   )
./samples/SAFE/__tmp_2847d3e7.c:163:14: error: too few arguments to function ‘graph_add_edge’
  163 |         if (!graph_add_edge(&graph
      |              ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_2847d3e7.c:93:5: note: declared here
   93 | int graph_add_edge(Graph *graph, int u, int v, int weight) {
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_2847d3e7.c:163:9: error: expected declaration or statement at end of input
  163 |         if (!graph_add_edge(&graph
      |         ^~
./samples/SAFE/__tmp_2847d3e7.c:163:9: error: expected declaration or statement at end of input
